# crf

./: .gitignore  CMakeLists.txt  Readme.md  test
python/: create_model.py  generate_dataset.py  learn_model.py  train_test_split.py
src/: CMakeLists.txt  crfmu.cpp  factor.cpp  factor.hpp  featurefactory.hpp  graphicalmodel.cpp  graphicalmodel.hpp  infer.cpp  infer.hpp  main.cpp  score_functions.hpp
